エラー解消

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,11 @@
       "@/*": [
         "./*"
       ]
-    }
+    },
+  "typeRoots": [
+      "./node_modules/@types",
+      "./types"  // カスタム型定義がある場合
+    ]
   },
   "include": [
     "**/*.ts",
