--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^12.0.5",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@types/react-native-vector-icons": "^6.4.18",
     "expo": "~51.0.9",
     "expo-constants": "~16.0.2",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.6",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
@@ -28,19 +30,24 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
-    "firebase": "^10.12.2",
+    "firebase": "^10.12.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-elements": "^3.4.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated-table": "^0.0.2",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.32.0",
+    "react-native-storage": "^1.0.1",
+    "react-native-table-component": "^1.2.2",
     "react-native-text-size": "^4.0.0-rc.1",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
