add limit number & enable to change it

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-numeric-input": "^1.9.1",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-table": "^0.0.2",
@@ -47,7 +48,8 @@
     "react-native-text-size": "^4.0.0-rc.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
-    "react-table": "^7.8.0"
+    "react-table": "^7.8.0",
+    "rmc-input-number": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
