--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@types/react-native-vector-icons": "^6.4.18",
+    "axios": "^1.7.2",
     "expo": "~51.0.9",
     "expo-constants": "~16.0.2",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.6",
+    "expo-image-picker": "^15.0.7",
     "expo-linking": "~6.3.1",
+    "expo-media-library": "^16.0.4",
     "expo-router": "~3.5.14",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
